local-minikube-docker/LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-loadbalancer-service
  labels:
    Lesson: minikube_1
    owner: jmuriki
spec:
  type: LoadBalancer
  selector:
    app: k8s-test-django-pod
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
